--- a/style.css
+++ b/style.css
@@ -93,6 +93,19 @@ a {
             animation: underline-gradient 6s linear infinite;
     background-image: linear-gradient(90deg, rgba(122, 95, 255, 0.8) 15%, rgba(1, 255, 137, 0.6) 35%, rgba(122, 95, 255, 0.8) 85%);
   }
+    .navbar{
+      background : black;
+      padding : 10px;
+      text-align : center;
+      color : white;
+    }
+    .navbar h1#un{
+      font-size : 20px;
+    }
+    .intro{
+      color : white;
+      font-size : 20px;
+    }
   
   @-webkit-keyframes underline-gradient {
     0% {
