--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body:after {
     font-size: 10pt;
 }
 
-h1#hd {
+.hd {
     grid-row-start: 1;
     grid-column-start: 1;
     grid-column-end: 3;
