--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     background: #e9e9e9;
-    background-image: url('background.jpg');
+    background-image: https://github.com/adeebatgithub/intro-html/main/background.jpg;
     background-size: cover;
     padding: 100px;
     font-family: 'Open Sans', sans-serif;
@@ -24,7 +24,7 @@ body:after {
     font-size: 10pt;
 }
 
-.hd {
+h1 {
     grid-row-start: 1;
     grid-column-start: 1;
     grid-column-end: 3;
@@ -37,6 +37,10 @@ body:after {
     background-size: 100% 0.2em;
     background-position: 0 100%;
     transition: background-size 0.25s ease-in;        
+}
+h2 {
+    grid-row-start: ;
+    grid-column-start: 5;
 }
 
 img {
@@ -93,19 +97,6 @@ a {
             animation: underline-gradient 6s linear infinite;
     background-image: linear-gradient(90deg, rgba(122, 95, 255, 0.8) 15%, rgba(1, 255, 137, 0.6) 35%, rgba(122, 95, 255, 0.8) 85%);
   }
-    .navbar{
-      background : black;
-      padding : 10px;
-      text-align : center;
-      color : white;
-    }
-    .navbar h1#un{
-      font-size : 20px;
-    }
-    .intro{
-      color : white;
-      font-size : 20px;
-    }
   
   @-webkit-keyframes underline-gradient {
     0% {
@@ -128,4 +119,3 @@ a {
               transform: translate3d(-75%, 0%, 0);
     }
   }
-  
